...
fun NavigationBody(auth: FirebaseAuth) {
    // Structure to hold nav item label and icon
    data class BottomNavItem(val label: String, val icon: ImageVector)

    // Bottom nav bar items
    val bottomNavItems = listOf(
        BottomNavItem("Home", Icons.Filled.Home),
        BottomNavItem("Learn Flags", Icons.Filled.Info),
        BottomNavItem("Settings", Icons.Filled.Settings)
    )

    var selectedIndex by remember { mutableStateOf(0) } // Keeps track of selected tab
    val viewModel: MainViewModel = viewModel() // ViewModel for shared state
...
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = Color(0xFFF97B57), // App bar background
                    navigationIconContentColor = Color.White,
                    titleContentColor = Color.White,
                    actionIconContentColor = Color.White
                ),
                title = { Text("Flag Quiz App") } // Title of app
            )
        }
    ) { innerPadding ->
        Box(
            modifier = Modifier
                .fillMaxSize()
...
