...
                    modifier = Modifier
                        .weight(1f)
                        .height(50.dp),
                    shape = RoundedCornerShape(8.dp),
                    colors = ButtonDefaults.buttonColors(containerColor = Color(0xFFF97B57), contentColor = Color.White)
                ) {
                    Text("Log In", fontSize = 16.sp)
                }
                Button(
                    onClick = onSignupClick,
                    modifier = Modifier
                        .weight(1f)
                        .height(50.dp),
...
